--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resumeawards">Resume</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
@@ -112,13 +113,43 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart of the design, I love nature and enjoying the view of the sky. I like to exercise myself, write about life and meditate.</p>
-                    <p>Communication: Editorial and digital design, social media, blogging and tech industry.</p>
+                    <p>Also I enjoy communication, editorial and digital design, social media, blogging and tech industry.</p>
              
                 </div>
             </section>
             <hr class="m-0" />
+             <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+             <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <p>Theoretical knowledge of design; digital, editorial and product.</p>
+                        </li>
+                 <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <p>HTML (basic).</p>
+                        </li>
+                   <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <p>Canva (advanced).</p>
+                        </li>
+                 <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <p>Adobe Illustrator (basic), After Effects (basic), Photoshop (basic).</p>
+                        </li>
+                  <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <p>Bilingual; Spanish (native) and English (fluent).</p>
+                        </li>
+                 
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
             <!-- Resume-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="resume">
                 <div class="resume-section-content">
                     <h2 class="mb-5">CV</h2>
                     <ul class="fa-ul mb-0">
