--- a/index.html
+++ b/index.html
@@ -152,12 +152,7 @@
             <section class="resume-section" id="resume">
                 <div class="resume-section-content">
                     <h2 class="mb-5">CV</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.jpeg" alt="" />
-                        </li>
-                    </ul>
+                    <embed widht="100%" height "500px" name="Marcela Cadena" src="CV.pdf" type="application/pdf">
                 </div>
             </section>
              <!-- Contact-->
