--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resumeawards">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -113,7 +113,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart of the design, I love nature and enjoying the view of the sky. I like to exercise myself, write about life and meditate.</p>
-                    <p>Also I enjoy communication, editorial and digital design, social media, blogging and tech industry.</p>
+                    <p>I also enjoy communication, editorial and digital design, social media, blogging, marketing and tech industry.</p>
              
                 </div>
             </section>
@@ -121,7 +121,7 @@
              <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Sills</h2>
              <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -151,7 +151,7 @@
             <!-- Resume-->
             <section class="resume-section" id="resume">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">CV</h2>
+                    <h2 class="mb-5">Resume</h2>
                     <embed widht="100%" height "500px" name="Marcela Cadena" src="CV.pdf" type="application/pdf">
                 </div>
             </section>
